--- a/cfg/soldier.cfg
+++ b/cfg/soldier.cfg
@@ -1,6 +1,6 @@
 exec ualiases
 exec ubinds
-exec uviewmodels
+exec uviewmodels_cross
 
 alias +rl "slot1; +attack; viewmodel_fov 54"
 alias -rl "-attack"
