--- a/cfg/tfdb.cfg
+++ b/cfg/tfdb.cfg
@@ -7,4 +7,5 @@ alias -pr "-attack2"
 alias +pr2 "slot1; +attack; voicemenu 2 6"
 alias -pr2 "-attack"
 bind mouse1 "+pr"
-bind mouse2 "+pr2"
+bind mouse2 "+use_action_slot_item"
+//bind mouse2 "+pr2"
