--- a/cfg/ugraphics-95.cfg
+++ b/cfg/ugraphics-95.cfg
@@ -28,7 +28,7 @@ violence_hgibs 0
 
 cl_detaildist 0
 cl_detailfade 0
-cl_drawmonitors 1					//0
+cl_drawmonitors 0
 cl_ejectbrass 0
 cl_jiggle_bone_framerate_cutoff 0
 cl_new_impact_effects 0
@@ -49,6 +49,7 @@ mat_hdr_level 0
 mat_max_worldmesh_vertices 512
 mat_motion_blur_enabled 0
 mat_parallaxmap 0
+mat_picmip 2
 mat_reducefillrate 1
 mat_reduceparticles 1
 mat_viewportscale 1
@@ -61,7 +62,7 @@ mat_aaquality 0
 mat_specular 1
 
 mp_decals 9
-r_3dsky 0
+r_3dsky 1
 r_ambientboost 0
 r_ambientfactor 0
 r_ambientmin 0
