--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -63,3 +63,5 @@ prec_check_update 					"1"
 closecaptions 						"0"
 cc_predisplay_time 					"0"
 tf_hud_show_servertimelimit 		"1"
+hud_saytext_time 					"6"
+cl_hud_playerclass_use_playermodel 	"0"
