--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -16,10 +16,10 @@ alias -saw "-attack"
 alias +charge "+attack2; slot2; dropitem; say_team "* Ubered, Sir! *"; voicemenu 2 3; autocall_initial"
 alias -charge "-attack2"
 
-alias fakeuber "voicemenu 1 7; say_team "* Keep calm, we are do not have uber! *""
-alias maskuber "voicemenu 2 5; say_team "* Our very own uber ready to use! *""
+alias fakeuber "voicemenu 1 7; say_team "* Keep calm, it is a fake *""
+alias maskuber "voicemenu 2 5; say_team "* Uber ready to use! *""
 
-alias +shiftmask "bind c "maskuber"; bind x "kill"; +showscores; cl_showfps 2"
+alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2"
 alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0"
 alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
