--- a/cfg/tfdb.cfg
+++ b/cfg/tfdb.cfg
@@ -1,11 +1,14 @@
 exec ualiases
 exec ubinds
+exec uviewmodels
+
 exec uviewmodels_dbtf
 
-alias +pr "slot1; +attack2; voicemenu 2 5"
+//alias +pr "slot1; +attack2; voicemenu 2 5"
+alias +pr "slot1; +attack2"
 alias -pr "-attack2"
 alias +pr2 "slot1; +attack; voicemenu 2 6"
 alias -pr2 "-attack"
 bind mouse1 "+pr"
-bind mouse2 "+use_action_slot_item"
-//bind mouse2 "+pr2"
+bind mouse2 "+pr2"
+bind mouse5 "voicemenu 0 1"
