--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -23,12 +23,11 @@ bind "k" "none"
 bind "l" "disguiseteam"
 bind "m" "open_charinfo_direct"
 bind "n" "open_charinfo_backpack"
-bind "p" "vr_reset_home_pos"
+bind "p" "impulse 201"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+mback"
 bind "t" "say"
-bind "u" "+panic"
 bind "v" "+voicerecord"
 bind "w" "+mfwd"
 bind "y" "say_team"
@@ -41,15 +40,17 @@ bind "KP_5" "uberspawn"
 bind "KP_HOME" "load_itempreset 0"
 bind "KP_UPARROW" "load_itempreset 1"
 bind "KP_PGUP" "load_itempreset 3"
-bind "KP_MINUS" "cl_decline_first_notification"
-bind "KP_PLUS" "cl_trigger_first_notification"
+bind "KP_PLUS" "uberspawn"
+bind "KP_MINUS" "kritspawn"
+bind "KP_MULTIPLY" "+quickswitch"
+bind "-" "cl_decline_first_notification"
+bind "=" "cl_trigger_first_notification"
 bind "'" "+moveup"
 bind "`" "toggleconsole"
 bind "," "changeclass"
 bind "." "changeteam"
 bind "/" "+movedown"
-bind "-" "disguiseteam"
-bind "=" "none"
+bind "o" "disguiseteam"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "dropitem"
 bind "TAB" "+showscores"
@@ -68,7 +69,8 @@ bind "F3" "incrementvar volume 0 1 0.01"
 bind "F5" "incrementvar mat_monitorgamma 1.6 2.6 0.1"
 bind "F6" "incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind "F7" "toggle r_drawviewmodel 0 1"
-bind "F8" "toggle hud_saytext_time 0 12"
+bind "F8" "toggle hud_saytext_time 0 6"
+//bind "F8" "toggle fov_desired 20 90"
 bind "F10" "hud_reloadscheme"
 bind "F11" "toggle cl_hud_minmode 0 1"
 bind "F12" "screenshot"
