--- a/cfg/uhud.cfg
+++ b/cfg/uhud.cfg
@@ -1,4 +1,4 @@
-closecaptions 						"1"
+closecaption 						"0"
 cc_predisplay_time 					"0"
 tf_hud_show_servertimelimit 		"1"
 hud_fastswitch 						"1"
