--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -24,6 +24,8 @@ tf_coach_request_nevershowagain 	"1"
 hud_combattext 						"1"
 hud_combattext_healing 				"1"
 hud_combattext_batching 			"1"
+hud_combattext_batching_healing 	"1"
+hud_combattext_batching_window 		"1.6"		//testing
 cl_hudhint_sound 					"1"
 tf_dingalingaling 					"1"
 tf_dingaling_volume 				"1"
@@ -60,8 +62,9 @@ prec_delete_useless_demo 			"0"
 prec_stv_status 					"1"
 prec_tag 							""
 prec_check_update 					"1"
-closecaptions 						"0"
+closecaption 						"0"
 cc_predisplay_time 					"0"
 tf_hud_show_servertimelimit 		"1"
 hud_saytext_time 					"6"
 cl_hud_playerclass_use_playermodel 	"0"
+mat_monitorgamma 					"2.6"
