--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -1,9 +1,5 @@
-alias +board "+showscores; cl_showfps 2"
-alias -board "-showscores; cl_showfps 0"
-
-alias "tminmode" "tminmode1"
-alias "tminmode1" "cl_hud_minmode 1; alias tminmode tminmode0"
-alias "tminmode0" "cl_hud_minmode 0; alias tminmode tminmode1"
+alias +board "bind k "kill"; +showscores; cl_showfps 2"
+alias -board "unbind k; -showscores; cl_showfps 0"
 
 alias "prec" "prec_mark; voicemenu 2 7"
 
@@ -23,16 +19,6 @@ alias checkback none
 alias checkleft none
 alias checkright none
 alias none ""
-
-alias "+panic" "cl_yawspeed 6400; +left";
-alias "-panic" "-left; cl_yawspeed 210";
-
-alias critcheck1 "join_class spy; alias critcheck critcheck2"
-alias critcheck2 "disguise 5 -1; alias critcheck critcheck3"
-alias critcheck3 "slot2; alias critcheck critcheck4"
-alias critcheck4 "lastdisguise; alias critcheck critcheck5"
-alias critcheck5 "join_class scout; alias critcheck critcheck1"
-alias critcheck critcheck1
 
 alias +cjump "+jump; +duck"
 alias -cjump "-duck; -jump"
