--- a/cfg/ugraphics_95.cfg
+++ b/cfg/ugraphics_95.cfg
@@ -43,7 +43,8 @@ mat_disable_fancy_blending 1
 mat_disable_lightwarp 1
 mat_envmapsize 8
 mat_envmaptgasize 8
-mat_filterlightmaps 1
+mat_filterlightmaps 1			//1 by def, test 2014-03-24
+mat_filtertextures 0
 mat_forceaniso 1
 mat_hdr_level 0
 mat_max_worldmesh_vertices 512
@@ -52,6 +53,7 @@ mat_parallaxmap 0
 mat_picmip 2
 mat_reducefillrate 1
 mat_reduceparticles 1
+mat_trilinear 0
 mat_viewportscale 1
 mat_viewportupscale 1
 mat_wateroverlaysize 1
@@ -99,12 +101,6 @@ tf_particles_disable_weather 1
 tracer_extra 0
 violence_ablood 1
 violence_hblood 1
-in_usekeyboardsampletime 0
-mat_clipz 1
-mat_forcehardwaresync 0
-mat_levelflush 1
-mat_vsync 0
-r_fastzreject -1
 mat_queue_mode 2
 cl_threaded_bone_setup 0
 cl_threaded_client_leaf_system 0
@@ -115,3 +111,9 @@ r_threaded_client_shadow_manager 1
 r_threaded_particles 1
 r_threaded_renderables 1
 cl_forcepreload 1
+in_usekeyboardsampletime 0
+mat_clipz 1
+mat_forcehardwaresync 0
+mat_levelflush 1
+mat_vsync 0
+r_fastzreject -1
