--- a/cfg/ulocalserver.cfg
+++ b/cfg/ulocalserver.cfg
@@ -84,17 +84,17 @@ sv_forcepreload "0"
 mp_friendlyfire 1
 host_timescale 1.0
 
-//tf_bot_add red 2 scout
-//tf_bot_add red 2 soldier
+tf_bot_add red 2 scout
+tf_bot_add red 2 soldier
 //-tf_bot_add red 1 pyro
-//tf_bot_add red 1 demoman
+tf_bot_add red 1 demoman
 //-tf_bot_add red 1 heavyweapons
 //-tf_bot_add red 1 engineer
 //-tf_bot_add red 1 sniper
 //-tf_bot_add red 1 spy
-//tf_bot_add red 1 medic
+tf_bot_add red 1 medic
 
-tf_bot_add red 1 heavyweapons
+//tf_bot_add red 1 heavyweapons
 
 tf_bot_add blue 2 scout
 tf_bot_add blue 2 soldier
@@ -104,7 +104,7 @@ tf_bot_add blue 1 demoman
 //tf_bot_add blue 1 engineer
 //tf_bot_add blue 1 sniper
 //tf_bot_add blue 1 spy
-//tf_bot_add red 1 medic
+//tf_bot_add blue 1 medic
 
 tf_bot_keep_class_after_death 1
 
