--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -33,7 +33,7 @@ tf_dingaling_pitchmindmg 			"115"
 tf_dingaling_pitchmaxdmg 			"22"
 tf_dingalingaling_repeat_delay 		"0.0"
 tf_simple_disguise_menu 			"0"
-tf_spectator_target_location 		"2"
+tf_spectator_target_location 		"3"			//bottom right
 tf_colorblindassist 				"0"
 cl_spec_carrieditems 				"0"
 cl_use_tournament_specgui 			"1"
