--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,13 +1,13 @@
 exec usettings 		//once; main game parameters
-//exec ugraphics-81 	//once; graphic config for '-dxlevel 81'
-exec ugraphics-95 	//once; graphic config for '-dxlevel 95'
+//exec ugraphics_81 	//once; graphic config for '-dxlevel 81'
+exec ugraphics_95 	//once; graphic config for '-dxlevel 95'
 exec unetwork 		//once; network settings
 exec umouse 		//once; mouse settings
 exec ualiases 		//multiple
 exec ubinds 		//multiple; re-binds
 clear
 echo ""
-echo "* Eniere's config loaded - March 20, 2014 *"
+echo "* Eniere's config loaded - March 24, 2014 *"
 echo ""
 //-dxlevel 81 -full -w 1366 -h 768 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
 //-dxlevel 95 -sw -noborder -w 1280 -h 720 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
