--- a/cfg/ugraphics_81.cfg
+++ b/cfg/ugraphics_81.cfg
@@ -36,9 +36,7 @@ cl_show_splashes 0
 func_break_max_pieces 0
 glow_outline_effect_enable 0
 lod_transitiondist 0
-mat_antialias 0
 mat_bumpmap 0
-mat_colcorrection_disableentities 1
 mat_colorcorrection 0
 mat_disable_bloom 1
 mat_disable_fancy_blending 1
@@ -113,3 +111,9 @@ r_threaded_client_shadow_manager 1
 r_threaded_particles 1
 r_threaded_renderables 1
 cl_forcepreload 1
+in_usekeyboardsampletime 0
+mat_clipz 1
+mat_forcehardwaresync 0
+mat_levelflush 1
+mat_vsync 0
+r_fastzreject -1
