--- a/cfg/uhud.cfg
+++ b/cfg/uhud.cfg
@@ -1,9 +1,8 @@
+// Recomended settings for idHUD
 closecaption 						"0"
 cc_predisplay_time 					"0"
 tf_hud_show_servertimelimit 		"1"
-hud_fastswitch 						"1"
 hud_combattext 						"1"
 cl_use_tournament_specgui 			"1"
 cl_spec_carrieditems 				"0"
-tf_spectator_target_location 		"0"
-cl_disablehtmlmotd 					"1"
+tf_spectator_target_location 		"3"
