--- a/cfg/ugraphics_81.cfg
+++ b/cfg/ugraphics_81.cfg
@@ -44,7 +44,7 @@ mat_disable_lightwarp 1
 mat_envmapsize 8
 mat_envmaptgasize 8
 mat_filterlightmaps 0
-mat_filtertextures 0
+mat_filtertextures 1			//0 by def, 2014-04-07
 mat_forceaniso 1
 mat_hdr_level 0
 mat_max_worldmesh_vertices 512
