--- a/cfg/uhud.cfg
+++ b/cfg/uhud.cfg
@@ -1,6 +1,7 @@
 // Recomended settings for idHUD
 closecaption 						"0"
 cc_predisplay_time 					"0"
+cc_linger_time 						"4"
 tf_hud_show_servertimelimit 		"1"
 hud_combattext 						"1"
 cl_use_tournament_specgui 			"1"
