--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -1,6 +1,7 @@
 exec ualiases
 exec ubinds
-exec uviewmodels
+exec uviewmodels_default
+70
 
 alias autocall_initial "hud_medicautocallersthreshold 50"
 alias autocall_temp "hud_medicautocallersthreshold 150"
@@ -25,11 +26,13 @@ alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
 
 alias uberspawn "preset1"
-alias preset1 "load_itempreset 1; alias uberspawn preset2; say_team "* Took the Medigun *""
-alias preset2 "load_itempreset 2; alias uberspawn preset1; say_team "* Took the Medigun *""
+alias preset1 "load_itempreset 1; alias uberspawn preset2; say_team "* Took the Medigun *"; play ui/switch.wav"
+alias preset2 "load_itempreset 2; alias uberspawn preset1; say_team "* Took the Medigun *"; play ui/switch.wav"
 alias kritspawn "preset3"
-alias preset0 "load_itempreset 0; alias kritspawn preset3; say_team "* Took the Kritzkrieg *""
-alias preset3 "load_itempreset 3; alias kritspawn preset0; say_team "* Took the Kritzkrieg *""
+alias preset0 "load_itempreset 0; alias kritspawn preset3; say_team "* Took the Kritzkrieg *"; play ui/switch.wav"
+alias preset3 "load_itempreset 3; alias kritspawn preset0; say_team "* Took the Kritzkrieg *"; play ui/switch.wav"
+
+hud_combattext_batching_window "3.0"
 
 bind KP_5 "uberspawn"
 bind KP_LEFTARROW "kritspawn"
