--- a/cfg/soldier.cfg
+++ b/cfg/soldier.cfg
@@ -1,12 +1,13 @@
 exec ualiases
 exec ubinds
 exec uviewmodels_cross
+90
 
-alias +rl "slot1; +attack; viewmodel_fov 54"
+alias +rl "slot1; +attack"
 alias -rl "-attack"
-alias +sg "slot2; +attack; viewmodel_fov 54"
+alias +sg "slot2; +attack"
 alias -sg "-attack"
-alias +sv "slot3; +attack; viewmodel_fov 90; voicemenu 2 3"
+alias +sv "slot3; +attack; voicemenu 2 3"
 alias -sv "-attack"
 bind mouse1 "+rl"
 bind mouse2 "+sg"
