--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -1,10 +1,5 @@
 alias +board "bind k "kill"; +showscores; cl_showfps 2"
-alias -board "unbind k; -showscores; cl_showfps 0"
-
-alias "prec" "prec_mark; voicemenu 2 7"
-
-alias +mle "slot3; +attack"
-alias -mle "-attack"
+alias -board "unbind k; -showscores; cl_showfps 0; mp_showrespawntimes"
 
 alias +mfwd "-back; +forward; alias checkfwd +forward"
 alias +mback "-forward; +back; alias checkback +back"
@@ -22,3 +17,17 @@ alias none ""
 
 alias +cjump "+jump; +duck"
 alias -cjump "-duck; -jump"
+
+alias +mle "slot3; +attack"
+alias -mle "-attack"
+
+alias prec "prec_mark; voicemenu 2 5"
+alias local "exec ulocalhost.cfg"
+alias defpyro "exec ubinds.cfg; exec uviewmodels_default.cfg; 70; play ui/switch.wav"
+alias default "exec uviewmodels_default.cfg"
+alias cross "exec uviewmodels_cross.cfg"
+alias dot "exec uviewmodels.cfg"
+alias 54 "viewmodel_fov 54"
+alias 70 "viewmodel_fov 70"
+alias 90 "viewmodel_fov 90"
+alias rec "exec udemo.cfg"
