--- a/cfg/ugraphics_81.cfg
+++ b/cfg/ugraphics_81.cfg
@@ -44,7 +44,7 @@ mat_disable_lightwarp 1
 mat_envmapsize 8
 mat_envmaptgasize 8
 mat_filterlightmaps 0
-mat_filtertextures 1			//0 by def, 2014-04-07
+mat_filtertextures 0			//squared textures 2014-05-27
 mat_forceaniso 1
 mat_hdr_level 0
 mat_max_worldmesh_vertices 512
@@ -61,7 +61,7 @@ mat_vsync 0
 mat_antialias 0
 mat_aaquality 0
 
-mat_specular 1
+mat_specular 0					//uber shining 2014-05-27
 
 mp_decals 9
 r_3dsky 1
