--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -84,28 +84,21 @@ sv_forcepreload "0"
 mp_friendlyfire 1
 host_timescale 1.0
 
-tf_bot_add red 2 scout
-tf_bot_add red 2 soldier
-//-tf_bot_add red 1 pyro
-tf_bot_add red 1 demoman
-//-tf_bot_add red 1 heavyweapons
-//-tf_bot_add red 1 engineer
-//-tf_bot_add red 1 sniper
-//-tf_bot_add red 1 spy
-tf_bot_add red 1 medic
+tf_bot_add 1 soldier red "Epsilon Gear"
+tf_bot_add 1 soldier red "Epsilon Mike"
+tf_bot_add 1 scout red "Epsilon wltrs"
+tf_bot_add 1 demoman red "Epsilon numlocked"
+tf_bot_add 1 scout red "Epsilon schocky"
+tf_bot_add 1 medic red "Epsilon KnOxXx"
 
-//tf_bot_add red 1 heavyweapons
-
-tf_bot_add blue 2 scout
-tf_bot_add blue 2 soldier
-//tf_bot_add blue 1 pyro
-tf_bot_add blue 1 demoman
-//tf_bot_add blue 1 heavyweapons
-//tf_bot_add blue 1 engineer
-//tf_bot_add blue 1 sniper
-//tf_bot_add blue 1 spy
-//tf_bot_add blue 1 medic
+tf_bot_add 1 soldier blue "cc//minimoose"
+tf_bot_add 1 soldier blue "cc//ipz-"
+tf_bot_add 1 demoman blue "cc//Retsh0ck"
+tf_bot_add 1 scout blue "cc//TviQ"
+tf_bot_add 1 scout blue "cc//smzi"
+tf_bot_add 1 medic blue "cc//Admirable"
 
 tf_bot_keep_class_after_death 1
+//tf_bot_kick all
 
 say Local config loaded.
