--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -25,7 +25,7 @@ hud_combattext 						"1"
 hud_combattext_healing 				"1"
 hud_combattext_batching 			"1"
 hud_combattext_batching_healing 	"1"
-hud_combattext_batching_window 		"1.6"		//testing
+hud_combattext_batching_window 		"2.6"		//testing
 cl_hudhint_sound 					"1"
 tf_dingalingaling 					"1"
 tf_dingaling_volume 				"1"
@@ -64,7 +64,11 @@ prec_tag 							""
 prec_check_update 					"1"
 closecaption 						"0"
 cc_predisplay_time 					"0"
+cc_linger_time 						"4"
 tf_hud_show_servertimelimit 		"1"
 hud_saytext_time 					"6"
 cl_hud_playerclass_use_playermodel 	"0"
 mat_monitorgamma 					"2.6"
+dsp_enhance_stereo 					"0"
+snd_surround_speakers 				"0"
+voice_enable 						"0"
