--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -37,8 +37,8 @@ bind "KP_DOWNARROW" "voice_menu_2"
 bind "KP_PGDN" "voice_menu_3"
 bind "KP_LEFTARROW" "kritspawn"
 bind "KP_5" "uberspawn"
-bind "KP_HOME" "load_itempreset 0"
-bind "KP_UPARROW" "load_itempreset 1"
+bind "KP_HOME" "preset1"
+bind "KP_UPARROW" "preset2"
 bind "KP_PGUP" "load_itempreset 3"
 bind "KP_PLUS" "uberspawn"
 bind "KP_MINUS" "kritspawn"
