--- a/cfg/udemo.cfg
+++ b/cfg/udemo.cfg
@@ -5,14 +5,16 @@ exec uviewmodels_default.cfg
 
 hud_saytext_time 0
 cl_hud_playerclass_use_playermodel 0
-volume 1
+volume 0.1
 
 bind 1 "demo_pause"
 bind 2 "demo_resume"
 bind 3 "demo_timescale 0.3"
 bind 4 "demo_timescale 1"
 bind 5 "demo_timescale 6"
+bind 0 "demo_gototick 1 pause"
 
+clear
 echo ""
 echo "--------------------------------------"
 echo "| press 1 to pause playback          |"
@@ -21,5 +23,7 @@ echo "|                                    |"
 echo "| press 3 for 30% of playback speed  |"
 echo "| press 4 for normal playback speed  |"
 echo "| press 5 for 600% of playback speed |"
+echo "|                                    |"
+echo "| press 0 for first demo tick        |"
 echo "--------------------------------------"
 echo ""
