--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -80,14 +80,16 @@ sv_logbans "0"
 sv_voiceenable "1"
 sv_forcepreload "0"
 
-//hurtme -16500
+//http://wiki.teamfortress.com/wiki/Cheats
+
+buddha
 mp_friendlyfire 1
 host_timescale 1.0
 
 tf_bot_add 1 soldier red "Epsilon Gear"
 tf_bot_add 1 soldier red "Epsilon Mike"
-tf_bot_add 1 scout red "Epsilon wltrs"
 tf_bot_add 1 demoman red "Epsilon numlocked"
+tf_bot_add 1 scout red "Epsilon wltrs"
 tf_bot_add 1 scout red "Epsilon schocky"
 tf_bot_add 1 medic red "Epsilon KnOxXx"
 
