--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -21,7 +21,7 @@ alias fakeuber "voicemenu 1 7; say_team "* Keep calm, it is a fake *""
 alias maskuber "voicemenu 2 5; say_team "* Uber ready to use! *""
 
 alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2"
-alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0"
+alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; mp_showrespawntimes"
 alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
 
