--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -31,3 +31,5 @@ alias 54 "viewmodel_fov 54"
 alias 70 "viewmodel_fov 70"
 alias 90 "viewmodel_fov 90"
 alias rec "exec udemo.cfg"
+alias preset1 "load_itempreset 0; play ui/switch.wav"
+alias preset2 "load_itempreset 1; play ui/switch.wav"
