--- a/cfg/ugraphics_95.cfg
+++ b/cfg/ugraphics_95.cfg
@@ -1,10 +1,10 @@
 cl_playerspraydisable 0
 r_spray_lifetime 2
 
-mat_shadowstate 1
-r_shadowmaxrendered 11
-r_shadowrendertotexture 1
-r_shadows 1
+mat_shadowstate 0	//1
+r_shadowmaxrendered 0	//11
+r_shadowrendertotexture 0	//1
+r_shadows 0	//1
 
 r_eyes 1
 r_flex 1
