--- a/cfg/uviewmodels_default.cfg
+++ b/cfg/uviewmodels_default.cfg
@@ -1,7 +1,7 @@
 r_drawviewmodel 	"1"
 fov_desired 		"90"
-cl_crosshair_scale 	"32"
+cl_crosshair_scale 	"0"		//32
 cl_crosshair_file 	""
-cl_crosshair_red 	200
-cl_crosshair_green 	200
-cl_crosshair_blue 	200
+cl_crosshair_red 	255
+cl_crosshair_green 	255
+cl_crosshair_blue 	255
