--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -23,7 +23,7 @@ alias -mle "-attack"
 
 alias prec "prec_mark; voicemenu 2 5"
 alias local "exec ulocalhost.cfg"
-alias defpyro "exec ubinds.cfg; exec uviewmodels_default.cfg; 70; play ui/switch.wav"
+alias defpyro "exec ubinds.cfg; exec uviewmodels_default.cfg; 70; play UI/buttonclick.wav"
 alias default "exec uviewmodels_default.cfg"
 alias cross "exec uviewmodels_cross.cfg"
 alias dot "exec uviewmodels.cfg"
@@ -31,5 +31,5 @@ alias 54 "viewmodel_fov 54"
 alias 70 "viewmodel_fov 70"
 alias 90 "viewmodel_fov 90"
 alias rec "exec udemo.cfg"
-alias preset1 "load_itempreset 0; play ui/switch.wav"
-alias preset2 "load_itempreset 1; play ui/switch.wav"
+alias preset1 "load_itempreset 0; play UI/buttonclick.wav"
+alias preset2 "load_itempreset 1; play UI/buttonclick.wav"
