--- a/cfg/ugraphics_81.cfg
+++ b/cfg/ugraphics_81.cfg
@@ -44,7 +44,7 @@ mat_disable_lightwarp 1
 mat_envmapsize 8
 mat_envmaptgasize 8
 mat_filterlightmaps 0
-mat_filtertextures 0			//squared textures 2014-05-27
+mat_filtertextures 0			//0=squared textures 2014-05-27
 mat_forceaniso 1
 mat_hdr_level 0
 mat_max_worldmesh_vertices 512
@@ -61,7 +61,7 @@ mat_vsync 0
 mat_antialias 0
 mat_aaquality 0
 
-mat_specular 0					//uber shining 2014-05-27
+mat_specular 0					//1=uber shining 2014-05-27
 
 mp_decals 9
 r_3dsky 1
@@ -101,7 +101,7 @@ tf_particles_disable_weather 1
 tracer_extra 0
 violence_ablood 1
 violence_hblood 1
-mat_queue_mode 2
+mat_queue_mode -1
 cl_threaded_bone_setup 0
 cl_threaded_client_leaf_system 0
 r_queued_decals 0
