--- a/cfg/unetwork.cfg
+++ b/cfg/unetwork.cfg
@@ -7,7 +7,10 @@ cl_smooth 					"0"
 cl_smoothtime 				"0.01"
 cl_updaterate 				"66"
 rate 						"60000"
-net_graphheight 			"1"
+net_graphheight 			"64"
+net_graphinsetbottom 		"437"
+net_graphinsetleft 			"0"
+net_graphinsetright 		"-30"
 net_graphpos 				"2"
 net_graphproportionalfont 	"0"
 net_graphshowinterp 		"1"
