--- a/cfg/uviewmodels.cfg
+++ b/cfg/uviewmodels.cfg
@@ -1,6 +1,6 @@
 r_drawviewmodel 	"1"
 fov_desired 		"90"
-cl_crosshair_scale 	"20"
+cl_crosshair_scale 	"0"		//20
 cl_crosshair_file 	"crosshair5"
 cl_crosshair_red 	255
 cl_crosshair_green 	255
