--- a/cfg/uviewmodels_cross.cfg
+++ b/cfg/uviewmodels_cross.cfg
@@ -1,6 +1,6 @@
 r_drawviewmodel 	"1"
 fov_desired 		"90"
-cl_crosshair_scale 	"32"
+cl_crosshair_scale 	"0"		//32
 cl_crosshair_file 	"crosshair7"
 cl_crosshair_red 	255
 cl_crosshair_green 	0
