--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -1,7 +1,9 @@
 exec ualiases
 exec ubinds
-exec uviewmodels_default
-70
+exec uhudsettings
+
+vm_70
+hud_combattext_batching_window "3.0"
 
 alias autocall_initial "hud_medicautocallersthreshold 50"
 alias autocall_temp "hud_medicautocallersthreshold 150"
@@ -26,16 +28,21 @@ alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
 
 alias uberspawn "preset1"
-alias preset1 "load_itempreset 1; alias uberspawn preset2; say_team "* Took the Medigun *"; play ui/switch.wav"
-alias preset2 "load_itempreset 2; alias uberspawn preset1; say_team "* Took the Medigun *"; play ui/switch.wav"
+alias preset1 "load_itempreset 1; alias uberspawn preset2; say_team "* Took the Medigun *""
+alias preset2 "load_itempreset 2; alias uberspawn preset1; say_team "* Took the Medigun *""
 alias kritspawn "preset3"
-alias preset0 "load_itempreset 0; alias kritspawn preset3; say_team "* Took the Kritzkrieg *"; play ui/switch.wav"
-alias preset3 "load_itempreset 3; alias kritspawn preset0; say_team "* Took the Kritzkrieg *"; play ui/switch.wav"
-
-hud_combattext_batching_window "3.0"
-
+alias preset0 "load_itempreset 0; alias kritspawn preset3; say_team "* Took the Kritzkrieg *""
+alias preset3 "load_itempreset 3; alias kritspawn preset0; say_team "* Took the Kritzkrieg *""
+bind KP_LEFTARROW "preset_A"		//"kritspawn"
 bind KP_5 "uberspawn"
-bind KP_LEFTARROW "kritspawn"
+
+alias preset_A "load_itempreset 0; say_team "* Took the Kritzkrieg *"
+alias preset_B "load_itempreset 1; say_team "* Took the Medigun *"
+alias preset_D "load_itempreset 3; say_team "* Took the Quickfix *"
+bind "KP_HOME" "preset_A"
+bind "KP_UPARROW" "preset_B"
+bind "KP_PGUP" "preset_D"
+
 bind c "fakeuber"
 //bind f2 "+autocall_temp_hit"
 bind mouse1 "+heal"
