--- a/cfg/soldier_localmvm.cfg
+++ b/cfg/soldier_localmvm.cfg
@@ -3,11 +3,14 @@ exec ubinds
 exec uhudsettings
 
 vm_90
-alias +primary "slot1; +attack"
-alias -primary "-attack"
+sv_cheats 1
+currency_give 30000
+buddha
+alias +primary "slot1; +attack; impulse 101"
+alias -primary "-attack; impulse 101"
 alias +second "slot2; +attack"
 alias -second "-attack"
-alias +melee "slot3; +attack; voicemenu 2 3"
+alias +melee "slot3; +attack; addcond 11"
 alias -melee "-attack"
 bind mouse1 "+primary"
 bind mouse2 "+second"
