--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -23,13 +23,8 @@ alias -mle "-attack"
 
 alias prec "prec_mark; voicemenu 2 5"
 alias local "exec ulocalhost.cfg"
-alias defpyro "exec ubinds.cfg; exec uviewmodels_default.cfg; 70; play UI/buttonclick.wav"
-alias default "exec uviewmodels_default.cfg"
-alias cross "exec uviewmodels_cross.cfg"
-alias dot "exec uviewmodels.cfg"
-alias 54 "viewmodel_fov 54"
-alias 70 "viewmodel_fov 70"
-alias 90 "viewmodel_fov 90"
+alias defpyro "exec ubinds.cfg; exec uhudsettings; vm_70"
 alias rec "exec udemo.cfg"
-alias preset1 "load_itempreset 0; play UI/buttonclick.wav"
-alias preset2 "load_itempreset 1; play UI/buttonclick.wav"
+alias preset1 "load_itempreset 0"
+alias preset2 "load_itempreset 1"
+alias preset3 "load_itempreset 3"
