--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -35,13 +35,13 @@ bind "z" "inspect"
 bind "KP_END" "voice_menu_1"
 bind "KP_DOWNARROW" "voice_menu_2"
 bind "KP_PGDN" "voice_menu_3"
-bind "KP_LEFTARROW" "kritspawn"
-bind "KP_5" "uberspawn"
+//bind "KP_LEFTARROW" "kritspawn"
+//bind "KP_5" "uberspawn"
 bind "KP_HOME" "preset1"
 bind "KP_UPARROW" "preset2"
-bind "KP_PGUP" "load_itempreset 3"
-bind "KP_PLUS" "uberspawn"
-bind "KP_MINUS" "kritspawn"
+bind "KP_PGUP" "preset3"
+bind "KP_PLUS" "x_type_switcher"
+bind "KP_MINUS" "x_color_switcher"
 bind "KP_MULTIPLY" "+quickswitch"
 bind "-" "cl_decline_first_notification"
 bind "=" "cl_trigger_first_notification"
