--- a/cfg/udemo.cfg
+++ b/cfg/udemo.cfg
@@ -1,7 +1,8 @@
 exec ualiases
 exec ubinds
-exec uviewmodels_default.cfg
-70
+exec uhudsettings
+
+vm_70
 
 hud_saytext_time 0
 cl_hud_playerclass_use_playermodel 0
