--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,14 +1,15 @@
 exec usettings 		//once; main game parameters
-exec ugraphics_81 	//once; graphic config for '-dxlevel 81'
-//exec ugraphics_95 	//once; graphic config for '-dxlevel 95'
+//exec ugraphics_81 	//once; graphic config for '-dxlevel 81'
+exec ugraphics_95 	//once; graphic config for '-dxlevel 95'
 //exec ugraphics_98 	//once; graphic config for '-dxlevel 98'
 exec unetwork 		//once; network settings
 exec umouse 		//once; mouse settings
+exec uhudsettings 	//multiple; crosshair and viewmodel settings
 exec ualiases 		//multiple
 exec ubinds 		//multiple; re-binds
 clear
 echo ""
-echo "* Eniere's config loaded - May 30, 2014 *"
+echo "* Eniere's config loaded - August 23, 2014 *"
 echo ""
 //-dxlevel 81 -full -w 1366 -h 768 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
 //-dxlevel 95 -sw -noborder -w 1280 -h 720 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
