--- a/cfg/scout.cfg
+++ b/cfg/scout.cfg
@@ -1,8 +1,9 @@
 exec ualiases
 exec ubinds
-exec uviewmodels_cross
-90
+exec uhudsettings
 
+vm_90
+hud_combattext_batching_window "3.0"
 alias +prm "slot1; +attack"
 alias -prm "-attack"
 alias +sec "slot2; +attack"
