--- a/cfg/tfdb.cfg
+++ b/cfg/tfdb.cfg
@@ -1,14 +1,15 @@
 exec ualiases
 exec ubinds
-exec uviewmodels
+exec hudsettings
 
-exec uviewmodels_dbtf
+v_model_off
+v_160
 
-//alias +pr "slot1; +attack2; voicemenu 2 5"
 alias +pr "slot1; +attack2"
 alias -pr "-attack2"
 alias +pr2 "slot1; +attack; voicemenu 2 6"
 alias -pr2 "-attack"
 bind mouse1 "+pr"
 bind mouse2 "+pr2"
+bind mouse4 "voicemenu 0 6"
 bind mouse5 "voicemenu 0 1"
