--- a/cfg/tfdb.cfg
+++ b/cfg/tfdb.cfg
@@ -2,8 +2,8 @@ exec ualiases
 exec ubinds
 exec hudsettings
 
-v_model_off
-v_160
+vm_model_off
+vm_160
 
 alias +pr "slot1; +attack2"
 alias -pr "-attack2"
