--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -2,7 +2,7 @@ exec ualiases
 exec ubinds
 exec uhudsettings
 
-vm_70
+vm_100
 hud_combattext_batching_window "3.0"
 
 alias autocall_initial "hud_medicautocallersthreshold 50"
@@ -10,11 +10,11 @@ alias autocall_temp "hud_medicautocallersthreshold 150"
 alias +autocall_temp_hit "autocall_temp"
 alias -autocall_temp_hit "autocall_initial"
 
-alias +heal "slot2; +attack; autocall_initial"
+alias +heal "slot2; +attack; autocall_initial; vm_70"
 alias -heal "-attack"
-alias +needles "slot1; +attack; autocall_temp"
+alias +needles "slot1; +attack; autocall_temp; vm_100"
 alias -needles "-attack"
-alias +saw "slot3; +attack; autocall_temp; r_drawviewmodel 1"
+alias +saw "slot3; +attack; autocall_temp; r_drawviewmodel 1; vm_100"
 alias -saw "-attack"
 alias +charge "+attack2; slot2; dropitem; say_team "* Ubered, Sir! *"; voicemenu 2 3; autocall_initial"
 alias -charge "-attack2"
