--- a/cfg/tfdb.cfg
+++ b/cfg/tfdb.cfg
@@ -1,6 +1,6 @@
 exec ualiases
 exec ubinds
-exec hudsettings
+exec uhudsettings
 
 vm_model_off
 vm_160
@@ -11,5 +11,5 @@ alias +pr2 "slot1; +attack; voicemenu 2 6"
 alias -pr2 "-attack"
 bind mouse1 "+pr"
 bind mouse2 "+pr2"
-bind mouse4 "voicemenu 0 6"
+bind mouse4 "+forward"
 bind mouse5 "voicemenu 0 1"
