--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -19,7 +19,7 @@ alias +cjump "+jump; +duck"
 alias -cjump "-duck; -jump"
 
 alias +mle "slot3; +attack"
-alias -mle "-attack"
+alias -mle "-attack; slot1"
 
 alias prec "prec_mark; voicemenu 2 5"
 alias local "exec ulocalhost.cfg"
