--- a/cfg/uhudsettings.cfg
+++ b/cfg/uhudsettings.cfg
@@ -6,6 +6,7 @@ alias vm_0 				"viewmodel_fov 0"
 alias vm_54 			"viewmodel_fov 54"
 alias vm_70 			"viewmodel_fov 70"
 alias vm_90 			"viewmodel_fov 90"
+alias vm_100 			"viewmodel_fov 100"
 alias vm_160 			"viewmodel_fov 160"
 
 //manual
@@ -21,6 +22,7 @@ alias x_color_green 	"cl_crosshair_red 0; cl_crosshair_green 255; cl_crosshair_b
 alias x_color_pink 		"cl_crosshair_red 255; cl_crosshair_green 0; cl_crosshair_blue 255"
 alias x_color_blue 		"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 255"
 alias x_color_white 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 255"
+alias x_color_black 	"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 0"
 
 //automatic
 alias x_type_switcher "x_dot"
@@ -36,5 +38,6 @@ alias x_color_yellow 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshai
 alias x_color_green 	"cl_crosshair_red 0; cl_crosshair_green 255; cl_crosshair_blue 0; alias x_color_switcher x_color_pink"
 alias x_color_pink 		"cl_crosshair_red 255; cl_crosshair_green 0; cl_crosshair_blue 255; alias x_color_switcher x_color_blue"
 alias x_color_blue 		"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 255; alias x_color_switcher x_color_white"
-alias x_color_white 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 255; alias x_color_switcher x_color_grey"
+alias x_color_white 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 255; alias x_color_switcher x_color_black"
+alias x_color_black 	"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 0; alias x_color_switcher x_color_grey"
 bind "KP_MINUS" "x_color_switcher"
