--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -1,6 +1,6 @@
 fov_desired 						"90"
 cl_flipviewmodels 					"0"
-hud_takesshots 						"0"
+hud_takesshots 						"0"			//turn it on when prec is brocken again
 hud_freezecamhide 					"1"
 cl_showhelp 						"0"
 cl_mouselook 						"1"
@@ -9,7 +9,7 @@ cl_notifications_show_ingame 		"0"
 cl_trading_show_requests_from 		"2"
 hud_classautokill 					"0"
 cl_spec_mode 						"5"
-cl_disablehtmlmotd 					"1"
+cl_disablehtmlmotd 					"0"			//1
 cl_autorezoom 						"1"
 tf_remember_activeweapon 			"1"
 tf_remember_lastswitched 			"1"
