--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -43,6 +43,7 @@ bind "KP_PGUP" "preset3"
 bind "KP_PLUS" "x_type_switcher"
 bind "KP_MINUS" "x_color_switcher"
 bind "KP_MULTIPLY" "+quickswitch"
+bind "KP_SLASH" "record temp; stop; snd_restart; hud_reloadscheme; heartbeat;"
 bind "-" "cl_decline_first_notification"
 bind "=" "cl_trigger_first_notification"
 bind "'" "+moveup"
@@ -64,12 +65,13 @@ bind "SHIFT" "+board"
 bind "ALT" "+strafe"
 bind "CTRL" "+duck"
 bind "F1" "toggle volume 0 0.1"
-bind "F2" "incrementvar volume 0 0.5 -0.01"
-bind "F3" "incrementvar volume 0 0.5 0.01"
+bind "F2" "incrementvar volume 0 0.3 -0.01"
+bind "F3" "incrementvar volume 0 0.3 0.01"
 bind "F5" "incrementvar mat_monitorgamma 1.6 2.6 0.1"
 bind "F6" "incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind "F7" "toggle r_drawviewmodel 0 1"
-bind "F8" "toggle hud_saytext_time 0 6"
+bind "F8" "toggle cl_first_person_uses_world_model 1 0"
+//bind "F8" "toggle hud_saytext_time 0 6"
 //bind "F8" "toggle fov_desired 20 90"
 bind "F10" "hud_reloadscheme"
 bind "F11" "toggle cl_hud_minmode 0 1"
