--- a/addons/PREC.cfg
+++ b/addons/PREC.cfg
@@ -6,8 +6,8 @@
 		"start_rec"		"buttons/button17.wav"
 		"stop_rec"		"buttons/button17.wav"
 		"on_about"		"vo/heavy_generic01.wav"
-		"on_mark"		"vo/heavy_generic01.wav"
-		"on_killstreak"	"vo/heavy_generic01.wav"
+		"on_mark"		//"vo/heavy_generic01.wav"
+		"on_killstreak"	//"vo/heavy_generic01.wav"
 	}
 //Here you can change plugins phrases
 	"Phrases"
