--- a/cfg/udemo.cfg
+++ b/cfg/udemo.cfg
@@ -10,6 +10,10 @@ hud_saytext_time 0
 cl_hud_playerclass_use_playermodel 0
 volume 0.1
 
+hud_damagemeter 0 				//Display damage-per-second information in the lower right corner of the screen.
+hud_damagemeter_ooctimer 1 		//How many seconds after the last damage event before we consider the player out of combat.
+hud_damagemeter_period 0 		//When set to zero, average damage-per-second across all recent damage events, otherwise average damage across defined period (nu
+
 bind 1 "demo_pause"
 bind 2 "demo_resume"
 bind 3 "demo_timescale 0.3"
