--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -73,3 +73,5 @@ mat_monitorgamma 					"2.6"
 dsp_enhance_stereo 					"0"
 snd_surround_speakers 				"0"
 voice_enable 						"0"
+tf_hud_target_id_alpha 						"127"
+tf_hud_target_id_disable_floating_health 	"1"
