--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -35,8 +35,8 @@ bind "z" "inspect"
 bind "KP_END" "voice_menu_1"
 bind "KP_DOWNARROW" "voice_menu_2"
 bind "KP_PGDN" "voice_menu_3"
-//bind "KP_LEFTARROW" "kritspawn"
-//bind "KP_5" "uberspawn"
+bind "KP_LEFTARROW" "join_class engineer"
+bind "KP_5" "join_class medic"
 bind "KP_HOME" "preset1"
 bind "KP_UPARROW" "preset2"
 bind "KP_PGUP" "preset3"
@@ -54,7 +54,7 @@ bind "/" "+movedown"
 bind "o" "disguiseteam"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "dropitem"
-bind "TAB" "+showscores"
+bind "TAB" "+quickswitch"
 bind "ESCAPE" "cancelselect"
 bind "INS" "+klook"
 bind "END" "centerview"
