--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -25,7 +25,7 @@ bind "m" "open_charinfo_direct"
 bind "n" "open_charinfo_backpack"
 bind "p" "impulse 201"
 bind "q" "lastinv"
-bind "r" "+reload"
+bind "r" "+quickswitch"//"+reload"
 bind "s" "+mback"
 bind "t" "say"
 bind "v" "+voicerecord"
@@ -54,7 +54,7 @@ bind "/" "+movedown"
 bind "o" "disguiseteam"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "dropitem"
-bind "TAB" "+quickswitch"
+bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
 bind "INS" "+klook"
 bind "END" "centerview"
