--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -22,8 +22,8 @@ alias -charge "-attack2"
 alias fakeuber "voicemenu 1 7; say_team "* Keep calm, it is a fake *""
 alias maskuber "voicemenu 2 5; say_team "* Uber ready to use! *""
 
-alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2"
-alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; mp_showrespawntimes"
+alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2; net_graph 1"
+alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; mp_showrespawntimes; net_graph 0"
 alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
 
@@ -33,6 +33,11 @@ alias preset_D "load_itempreset 3; say_team "* Took the Quickfix *"
 bind "KP_HOME" "preset_A"
 bind "KP_UPARROW" "preset_B"
 bind "KP_PGUP" "preset_D"
+
+alias uberspawn "preset1"
+alias preset1 "load_itempreset 1; alias uberspawn preset2"
+alias preset2 "load_itempreset 2; alias uberspawn preset1"
+bind KP_5 "uberspawn"
 
 bind c "fakeuber"
 //bind f2 "+autocall_temp_hit"
