--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -1,5 +1,5 @@
-alias +board "bind k "kill"; +showscores; cl_showfps 2"
-alias -board "unbind k; -showscores; cl_showfps 0; mp_showrespawntimes"
+alias +board "bind k "kill"; +showscores; cl_showfps 2; net_graph 1"
+alias -board "unbind k; -showscores; cl_showfps 0; mp_showrespawntimes; net_graph 0"
 
 alias +mfwd "-back; +forward; alias checkfwd +forward"
 alias +mback "-forward; +back; alias checkback +back"
