--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -35,7 +35,7 @@ bind "z" "inspect"
 bind "KP_END" "voice_menu_1"
 bind "KP_DOWNARROW" "voice_menu_2"
 bind "KP_PGDN" "voice_menu_3"
-bind "KP_LEFTARROW" "join_class engineer"
+bind "KP_LEFTARROW" "join_class engineer; exec engineer"
 bind "KP_5" "join_class medic"
 bind "KP_HOME" "preset1"
 bind "KP_UPARROW" "preset2"
