--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -2,7 +2,6 @@ exec ualiases
 exec ubinds
 exec uhudsettings
 
-vm_100
 hud_combattext_batching_window "3.0"
 
 alias autocall_initial "hud_medicautocallersthreshold 50"
@@ -19,13 +18,13 @@ alias -saw "-attack"
 alias +charge "+attack2; slot2; dropitem; say_team "* Ubered, Sir! *"; voicemenu 2 3; autocall_initial"
 alias -charge "-attack2"
 
-alias fakeuber "voicemenu 1 7; say_team "* Keep calm, it is a fake *""
-alias maskuber "voicemenu 2 5; say_team "* Uber ready to use! *""
-
 alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2; net_graph 1"
 alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; mp_showrespawntimes; net_graph 0"
 alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
+
+alias fakeuber "voicemenu 1 7; say_team "* Keep calm, it is a fake *""
+alias maskuber "voicemenu 2 5; say_team "* Uber ready to use! *""
 
 alias preset_A "load_itempreset 0; say_team "* Took the Kritzkrieg *"
 alias preset_B "load_itempreset 1; say_team "* Took the Medigun *"
@@ -34,17 +33,10 @@ bind "KP_HOME" "preset_A"
 bind "KP_UPARROW" "preset_B"
 bind "KP_PGUP" "preset_D"
 
-alias uberspawn "preset1"
-alias preset1 "load_itempreset 1; alias uberspawn preset2"
-alias preset2 "load_itempreset 2; alias uberspawn preset1"
-bind KP_5 "uberspawn"
-
 bind c "fakeuber"
-//bind f2 "+autocall_temp_hit"
 bind mouse1 "+heal"
 bind mouse2 "+needles"
 bind mouse3 "+attack3"
 bind mouse5 "+saw"
 bind mouse4 "+charge"
-bind shift "+shiftmask"
-bind SPACE "+jump"
+bind SHIFT "+shiftmask"
