--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -18,8 +18,7 @@ alias none ""
 alias +cjump "+jump; +duck"
 alias -cjump "-duck; -jump"
 
-alias +mle "slot3; +attack"
-alias -mle "-attack; slot1"
+alias mle "slot3"
 
 alias prec "prec_mark; voicemenu 2 5"
 alias local "exec ulocalhost.cfg"
