--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -26,6 +26,7 @@ bind "n" "open_charinfo_backpack"
 bind "p" "impulse 201"
 bind "q" "lastinv"
 bind "r" "+quickswitch"//"+reload"
+//bind "r" "+reload"
 bind "s" "+mback"
 bind "t" "say"
 bind "v" "+voicerecord"
@@ -36,7 +37,7 @@ bind "KP_END" "voice_menu_1"
 bind "KP_DOWNARROW" "voice_menu_2"
 bind "KP_PGDN" "voice_menu_3"
 bind "KP_LEFTARROW" "join_class engineer; exec engineer"
-bind "KP_5" "join_class medic"
+bind "KP_5" "join_class medic; exec medic"
 bind "KP_HOME" "preset1"
 bind "KP_UPARROW" "preset2"
 bind "KP_PGUP" "preset3"
@@ -44,22 +45,22 @@ bind "KP_PLUS" "x_type_switcher"
 bind "KP_MINUS" "x_color_switcher"
 bind "KP_MULTIPLY" "+quickswitch"
 bind "KP_SLASH" "record temp; stop; snd_restart; hud_reloadscheme; heartbeat;"
-bind "-" "cl_decline_first_notification"
-bind "=" "cl_trigger_first_notification"
-bind "'" "+moveup"
+unbind "-"
+unbind "="
+unbind "'"
 bind "`" "toggleconsole"
 bind "," "changeclass"
 bind "." "changeteam"
-bind "/" "+movedown"
+unbind "/"
 bind "o" "disguiseteam"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "dropitem"
 bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
-bind "INS" "+klook"
-bind "END" "centerview"
-bind "PGUP" "+lookup"
-bind "PGDN" "+lookdown"
+unbind "INS"
+unbind "END"
+unbind "PGUP"
+unbind "PGDN"
 bind "PAUSE" "pause"
 bind "SHIFT" "+board"
 bind "ALT" "+strafe"
@@ -70,15 +71,15 @@ bind "F3" "incrementvar volume 0 0.3 0.01"
 bind "F5" "incrementvar mat_monitorgamma 1.6 2.6 0.1"
 bind "F6" "incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind "F7" "toggle r_drawviewmodel 0 1"
-bind "F8" "toggle cl_first_person_uses_world_model 1 0"
-//bind "F8" "toggle hud_saytext_time 0 6"
+bind "F8" "toggle hud_saytext_time 0 6"
+//bind "F8" "toggle cl_first_person_uses_world_model 1 0"
 //bind "F8" "toggle fov_desired 20 90"
 bind "F10" "hud_reloadscheme"
 bind "F11" "toggle cl_hud_minmode 0 1"
-bind "F12" "screenshot"
+unbind "F12"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+attack3"
-bind "MOUSE5" "+mle"
+bind "MOUSE5" "mle"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
