--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -1,106 +1,30 @@
-log on
-
-tv_delay 90
-tv_delaymapchange 1
-tv_transmitall 1
-
 mp_maxrounds 0
 mp_timelimit 30
 mp_windifference 5
 mp_winlimit 0
-
 mp_allowspectators 1
-mp_bonusroundtime 0
 mp_disable_respawn_times 0
-mp_fadetoblack 0
-mp_footsteps 1
 mp_forcecamera 1
-mp_fraglimit 0
-mp_idledealmethod 0
-mp_match_end_at_timelimit 1
-mp_respawnwavetime 10.0
-mp_stalemate_enable 0
+mp_respawnwavetime 7.0
 mp_teams_unbalance_limit "0"
 mp_tournament "1"
-mp_tournament_allow_non_admin_restart "0"
 mp_tournament_stopwatch 1
 
-sv_allow_votes 0
-sv_allow_wait_command 0
-sv_alltalk 0
 sv_cheats 1
-sv_client_max_interp_ratio 5
-sv_client_min_interp_ratio 1
-sv_client_predict 1
-sv_consistency 1
-sv_gravity 800
-sv_maxcmdrate 66
-sv_maxrate 0
-sv_maxupdaterate 66
-sv_mincmdrate 40
-sv_minrate 0
-sv_minupdaterate 40
-sv_pausable 1
-//sv_pure 2
-sv_pure_kick_clients 1
-sv_restrict_aspect_ratio_fov 0
-sv_timeout 10
 
-tf_arena_first_blood 0
-tf_avoidteammates_pushaway 0
-tf_clamp_airducks 1
-tf_ctf_bonus_time 0
-tf_damage_disablespread 1
-tf_flag_caps_per_round 0
-tf_teamtalk 1
 tf_tournament_hide_domination_icons 1
 tf_use_fixed_weaponspreads 1
 tf_weapon_criticals 0
 
 mp_tournament_restart
-//mp_tournament_whitelist "cfg/etf2l_whitelist_6v6.txt"
 
-//tf_tournament_classlimit_scout -2
-//tf_tournament_classlimit_soldier -2
-//tf_tournament_classlimit_pyro -1
-//tf_tournament_classlimit_demoman -1
-//tf_tournament_classlimit_heavy -1
-//tf_tournament_classlimit_engineer -1
-//tf_tournament_classlimit_medic -1
-//tf_tournament_classlimit_sniper -1
-//tf_tournament_classlimit_spy -1
-
-sv_logsdir "logs"
-sv_logfile "1"
-sv_logflush "0"
-sv_logecho "1"
-sv_log_onefile "0"
-sv_logbans "0"
-
-sv_voiceenable "1"
-sv_forcepreload "0"
-
-//http://wiki.teamfortress.com/wiki/Cheats
-
-buddha
 mp_friendlyfire 1
-host_timescale 1.0
+host_timescale 1
 
-tf_bot_add 1 soldier red "Epsilon Gear"
-tf_bot_add 1 soldier red "Epsilon Mike"
-tf_bot_add 1 demoman red "Epsilon numlocked"
-tf_bot_add 1 scout red "Epsilon wltrs"
-tf_bot_add 1 scout red "Epsilon schocky"
-tf_bot_add 1 medic red "Epsilon KnOxXx"
+tf_bot_add 1 soldier red "R_SCOUT"
+tf_bot_add 1 medic red "R_MEDIC"
 
-tf_bot_add 1 soldier blue "cc//minimoose"
-tf_bot_add 1 soldier blue "cc//ipz-"
-tf_bot_add 1 demoman blue "cc//Retsh0ck"
-tf_bot_add 1 scout blue "cc//TviQ"
-tf_bot_add 1 scout blue "cc//smzi"
-tf_bot_add 1 medic blue "cc//Admirable"
+tf_bot_add 1 scout blue "B_SCOUT"
+tf_bot_add 1 medic blue "B_MEDIC"
 
 tf_bot_keep_class_after_death 1
-//tf_bot_kick all
-
-say Local config loaded.
