--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -73,5 +73,12 @@ mat_monitorgamma 					"2.6"
 dsp_enhance_stereo 					"0"
 snd_surround_speakers 				"0"
 voice_enable 						"0"
-//tf_hud_target_id_alpha 						"127"
+//tf_hud_target_id_alpha 				"127"
 tf_hud_target_id_disable_floating_health 	"1"
+con_enable 							"1"
+con_filter_enable 					"1"
+con_filter_text_out 				"particle"
+con_filter_text_out 				"material"
+con_filter_text_out 				"muzzle"
+con_filter_text_out 				"Cannot update control point"
+con_filter_text_out 				"doesn't have attachment"
