--- a/cfg/ugraphics_90.cfg
+++ b/cfg/ugraphics_90.cfg
@@ -186,4 +186,5 @@ studio_queue_mode 0 							   // default "1". Can give a major FPS boost, but ca
 //cl_mvm_wave_status_visible_during_wave 1 // Extremely useful convar to show bots remaining without having to view scoreboard
 
 clear
+r_drawtracers_firstperson 0
 sv_cheats 0 					  // Turning sv_cheats off now, since we don't need it on anymore.
