--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -9,9 +9,9 @@ alias autocall_temp "hud_medicautocallersthreshold 150"
 alias +autocall_temp_hit "autocall_temp"
 alias -autocall_temp_hit "autocall_initial"
 
-alias +heal "slot2; +attack; autocall_initial; vm_70"
+alias +heal "slot2; +attack; autocall_initial; r_drawviewmodel 0; viewmodel_fov 40"
 alias -heal "-attack"
-alias +needles "slot1; +attack; autocall_temp; vm_100"
+alias +needles "slot1; +attack; autocall_temp; r_drawviewmodel 0; vm_100"
 alias -needles "-attack"
 alias +saw "slot3; +attack; autocall_temp; r_drawviewmodel 1; vm_100"
 alias -saw "-attack"
@@ -19,7 +19,7 @@ alias +charge "+attack2; slot2; dropitem; say_team "* Ubered, Sir! *"; voicemenu
 alias -charge "-attack2"
 
 alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2; net_graph 1"
-alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; mp_showrespawntimes; net_graph 0"
+alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; net_graph 0"	//mp_showrespawntimes; 
 alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
 
