--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -38,6 +38,7 @@ bind "KP_DOWNARROW" "voice_menu_2"
 bind "KP_PGDN" "voice_menu_3"
 bind "KP_LEFTARROW" "join_class engineer; exec engineer"
 bind "KP_5" "join_class medic; exec medic"
+bind "KP_RIGHTARROW" "join_class pyro; exec pyro"
 bind "KP_HOME" "preset1"
 bind "KP_UPARROW" "preset2"
 bind "KP_PGUP" "preset3"
@@ -71,7 +72,7 @@ bind "F3" "incrementvar volume 0 0.3 0.01"
 bind "F5" "incrementvar mat_monitorgamma 1.6 2.6 0.1"
 bind "F6" "incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind "F7" "toggle r_drawviewmodel 0 1"
-bind "F8" "toggle hud_saytext_time 0 6"
+bind "F8" "toggle hud_saytext_time 0 3"
 //bind "F8" "toggle cl_first_person_uses_world_model 1 0"
 //bind "F8" "toggle fov_desired 20 90"
 bind "F10" "hud_reloadscheme"
