--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -67,7 +67,7 @@ closecaption 						"0"
 cc_predisplay_time 					"0"
 cc_linger_time 						"4"
 tf_hud_show_servertimelimit 		"1"
-hud_saytext_time 					"6"
+hud_saytext_time 					"3"
 cl_hud_playerclass_use_playermodel 	"0"
 mat_monitorgamma 					"2.6"
 dsp_enhance_stereo 					"0"
@@ -77,8 +77,12 @@ voice_enable 						"0"
 tf_hud_target_id_disable_floating_health 	"1"
 con_enable 							"1"
 con_filter_enable 					"1"
-con_filter_text_out 				"particle"
-con_filter_text_out 				"material"
-con_filter_text_out 				"muzzle"
+con_filter_text_out 				"Particle"
+con_filter_text_out 				"Material"
+con_filter_text_out 				"Muzzle"
 con_filter_text_out 				"Cannot update control point"
-con_filter_text_out 				"doesn't have attachment"
+con_filter_text_out 				"Doesn't have attachment"
+con_filter_text_out 				"Can't use cheat cvar"
+con_filter_text_out 				"Attemped to precache"
+con_filter_text_out 				"Connection to game coordinator established"
+con_filter_text_out 				"Error: Material"
