--- a/cfg/udemo.cfg
+++ b/cfg/udemo.cfg
@@ -5,14 +5,15 @@ exec uhudsettings
 vm_70
 
 studio_queue_mode 0
+mat_queue_mode 1				//-1 by def, 2 is on, 0-1 is off
 
 hud_saytext_time 0
 cl_hud_playerclass_use_playermodel 0
 volume 0.1
 
-hud_damagemeter 0 				//Display damage-per-second information in the lower right corner of the screen.
-hud_damagemeter_ooctimer 1 		//How many seconds after the last damage event before we consider the player out of combat.
-hud_damagemeter_period 0 		//When set to zero, average damage-per-second across all recent damage events, otherwise average damage across defined period (nu
+hud_damagemeter 1				//Display damage-per-second information in the lower right corner of the screen.
+hud_damagemeter_ooctimer 1		//How many seconds after the last damage event before we consider the player out of combat.
+hud_damagemeter_period 0		//When set to zero, average damage-per-second across all recent damage events, otherwise average damage across defined period (nu
 
 bind 1 "demo_pause"
 bind 2 "demo_resume"
@@ -22,6 +23,8 @@ bind 5 "demo_timescale 6"
 bind 0 "demo_gototick 1 pause"
 
 clear
+echo ""
+echo "mat_queue_mode set to 1"
 echo ""
 echo "--------------------------------------"
 echo "| press 1 to pause playback          |"
