--- a/cfg/ugraphics_81.cfg
+++ b/cfg/ugraphics_81.cfg
@@ -101,7 +101,7 @@ tf_particles_disable_weather 1
 tracer_extra 0
 violence_ablood 1
 violence_hblood 1
-mat_queue_mode -1
+mat_queue_mode 1					//-1 by def, 2 is on, 0-1 is off
 cl_threaded_bone_setup 0
 cl_threaded_client_leaf_system 0
 r_queued_decals 0
