--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -10,6 +10,8 @@ mp_teams_unbalance_limit "0"
 mp_tournament "1"
 mp_tournament_stopwatch 1
 
+tv_enable 1
+
 sv_cheats 1
 
 tf_tournament_hide_domination_icons 1
