--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -18,8 +18,8 @@ alias -saw "-attack"
 alias +charge "+attack2; slot2; dropitem; say_team "* Ubered, Sir! *"; voicemenu 2 3; autocall_initial"
 alias -charge "-attack2"
 
-alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores; cl_showfps 2; net_graph 1"
-alias -shiftmask "bind c "fakeuber"; unbind x; -showscores; cl_showfps 0; net_graph 0"	//mp_showrespawntimes; 
+alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores"
+alias -shiftmask "bind c "fakeuber"; unbind x; -showscores"	//mp_showrespawntimes; 
 alias slot1bind "slot1; autocall_temp"
 alias slot2bind "slot2; autocall_initial"
 
