--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -63,10 +63,10 @@ unbind "END"
 unbind "PGUP"
 unbind "PGDN"
 bind "PAUSE" "pause"
-bind "SHIFT" "+board"
+bind "SHIFT" "+showscores"//"+board"
 bind "ALT" "+strafe"
 bind "CTRL" "+duck"
-bind "F1" "toggle volume 0 0.1"
+bind "F1" "toggle volume 0 0.05"
 bind "F2" "incrementvar volume 0 0.3 -0.01"
 bind "F3" "incrementvar volume 0 0.3 0.01"
 bind "F5" "incrementvar mat_monitorgamma 1.6 2.6 0.1"
