--- a/cfg/udemo.cfg
+++ b/cfg/udemo.cfg
@@ -6,34 +6,32 @@ vm_70
 
 studio_queue_mode 0
 mat_queue_mode 1				//-1 by def, 2 is on, 0-1 is off
-
 hud_saytext_time 0
 cl_hud_playerclass_use_playermodel 0
 volume 0.1
 
-hud_damagemeter 1				//Display damage-per-second information in the lower right corner of the screen.
-hud_damagemeter_ooctimer 1		//How many seconds after the last damage event before we consider the player out of combat.
-hud_damagemeter_period 0		//When set to zero, average damage-per-second across all recent damage events, otherwise average damage across defined period (nu
+hud_damagemeter 1
+hud_damagemeter_ooctimer 1
+hud_damagemeter_period 0
 
-bind 1 "demo_pause"
-bind 2 "demo_resume"
-bind 3 "demo_timescale 0.3"
-bind 4 "demo_timescale 1"
-bind 5 "demo_timescale 6"
-bind 0 "demo_gototick 1 pause"
+bind A "demo_timescale 0.3"
+bind W "demo_timescale 1"
+bind D "demo_timescale 6"
+bind Q "demo_gototick 1 pause"
+bind SPACE "demo_togglepause"
 
 clear
+
 echo ""
 echo "mat_queue_mode set to 1"
 echo ""
-echo "--------------------------------------"
-echo "| press 1 to pause playback          |"
-echo "| press 2 to resume playback         |"
-echo "|                                    |"
-echo "| press 3 for 30% of playback speed  |"
-echo "| press 4 for normal playback speed  |"
-echo "| press 5 for 600% of playback speed |"
-echo "|                                    |"
-echo "| press 0 for first demo tick        |"
-echo "--------------------------------------"
+echo "------------------------------------------"
+echo "| press SPACE to pause/resume playback   |"
+echo "|                                        |"
+echo "| press A for 30% of playback speed      |"
+echo "| press W for normal playback speed      |"
+echo "| press D for 600% of playback speed     |"
+echo "|                                        |"
+echo "| press Q for first demo tick            |"
+echo "------------------------------------------"
 echo ""
